plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    maven {
        url "https://repo.fintlabs.no/releases"
    }
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    implementation "no.fint:fint-utdanning-model-java:${FINT_Version}"
    implementation "no.fint:fint-administrasjon-model-java:${FINT_Version}"
    implementation "no.fint:fint-arkiv-model-java:${FINT_Version}"
    implementation "no.fint:fint-okonomi-model-java:${FINT_Version}"
    implementation "no.fint:fint-personvern-model-java:${FINT_Version}"
    implementation "no.fintlabs:fint-core-resource-server-security:2.0.0"

    implementation 'com.graphql-java:graphql-java:21.3'
    implementation 'org.reflections:reflections:0.10.2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
